--- a/code/index.html
+++ b/code/index.html
@@ -143,7 +143,7 @@
         </a>
       </div>
       <div class="button-container">
-        <a href="#" target="blank" alt="subscribe"><button class="subscribe">Subscribe</button></a>
+        <button class="subscribe">Subscribe</button>
       </div>
     </section>
   </main>
