--- a/code/index.html
+++ b/code/index.html
@@ -22,7 +22,7 @@
   <body>
     <section class="full__container">
       <header class="main__header">
-        <img src="images/heading1.svg"/>
+        <img src="images/top-logo.svg"/>
       </header>
       <nav class="my__nav">
         <a href="#">Startpage</a>
@@ -72,7 +72,7 @@
           </p>
           <span>Adopt me!</span>
         </div>
-        <div>
+        <div class="yellow-box">
           <h2>Adopt, don't shop</h2>
           <p>
             Cats are fats i like to pets them they like to meow back cats are
@@ -99,7 +99,7 @@
           <span>Adopt me!</span>
         </div>
 
-        <div>
+        <div class="green-box">
           <h2>
             At the moment we have 32 cats in our shelter, which will you adopt?
           </h2>
@@ -137,7 +137,7 @@
           <span>Adopt me!</span>
         </div>
 
-        <div>
+        <div class="purple-box">
           <h2>
             Feeding your cats smaller amounts several times a day works better
           </h2>
@@ -175,7 +175,7 @@
           </p>
           <span>Adopt me!</span>
         </div>
-        <div>
+        <div class="blue-box">
           <h2>
             Most cats enjoy a brush trough of their fur at least once a week
           </h2>
