--- a/code/index.html
+++ b/code/index.html
@@ -22,7 +22,7 @@
   <body>
     <section class="full__container">
       <header class="main__header">
-        <img src="images/top-logo.svg"/>
+        <img src="images/header-logo.svg"/>
       </header>
       <nav class="my__nav">
         <a href="#">Startpage</a>
