Format index html

--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
   <header>
     <!-- Some kind of logo and navbar -->
   </header>
-
+test 
   <section class="big-news">
     <!-- The big news content -->
   </section>
