added a h1 to the page

--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,7 @@
     <header class="header">
       <!-- Some kind of logo and navbar -->
       <img class="logo" src="logo.svg" alt="Technigo logo" />
+      <h1>My HEader is great!</h1>
       <nav>
         <a class="order-1" href="#">one</a>
         <a href="#">two</a>
