--- a/code/index.html
+++ b/code/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8" />
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
   <header>
     <!-- Some kind of logo and navbar -->
   </header>
-test 
+
   <section class="big-news">
     <!-- The big news content -->
   </section>
