--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,72 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Binoklis</title>
+    <link rel="shortcut icon" type="image/png" href="./binoklis-logo.png"/>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    <header class="header">
+      <img class="logo-image" src="binoklis-logo.png" alt="Logo of the company- binoculars" />
+      <h1 class="title-text">binoklis</h1>
+      <nav>
+        <a class="link-plays" href="#">plays</a>
+        <a class="link-reviews" href="#">reviews</a>
+        <a class="link-about" href="#">about</a>
+        <a class="link-contact" href="#">contact</a>
+      </nav>
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <div class="big-news-visual">
+        <img class="big-news-picture" src="https://images.unsplash.com/photo-1559782004-0485f6b3529f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" alt="Theatre performance" />
+      </div>
+      <div class="big-news-text">
+        <p>The performance LATVIAN LOVE is based on true events and actors’ own fantasies. Materials obtained during interviews and meetings – personal stories, letters, photographs – served as a source for the actors’ fantasy and work on the parts. The performance consists of 13 scenes, each presenting different dating situation and social group. All the characters represent some true to type personalities one can find somewhere next to us either in Riga or in country-side.</p>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="small-news">
+      <div class="small-news-item">
+        <img class="small-news-picture" src="https://images.unsplash.com/photo-1521380233442-49ad9332fcf8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="portrait of a woman" />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-picture" src="https://images.unsplash.com/photo-1617127610788-3a645fe02bf9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="audience with masks" />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-picture" src="https://images.unsplash.com/photo-1477336229416-9d67406e73bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" alt="blue smoke in a tunel" />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-picture" src="https://images.unsplash.com/photo-1505205136697-6913dd6db1a7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1083&q=80" alt="old theater hall" />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-picture" src="https://images.unsplash.com/photo-1435034568314-8303dbda4b8c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80" alt="circus" />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-picture" src="https://images.unsplash.com/photo-1586351011807-b79c8ef43057?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" alt="violin player" />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-picture" src="https://images.unsplash.com/photo-1571672346827-ee4040cdd7d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80" alt="closed currtains" />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
+      </div>
+      <div class="small-news-item">
+        <img class="small-news-picture" src="https://images.unsplash.com/photo-1538600375473-cdc68cf8bf81?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="documentary film screening" />
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper metus quis felis egestas scelerisque. Aenean consequat odio a ipsum feugiat suscipit. Phasellus odio ex, dignissim id pharetra vitae, imperdiet tincidunt augue. Donec ligula arcu, ullamcorper nec bibendum sed, pulvinar nec lorem. In tristique arcu.</p>
+      </div>
     </section>
   </body>
 </html>
