Setting up project, adding text and img html, adding css, css grid and responsive design

--- a/code/index.html
+++ b/code/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
@@ -9,14 +10,56 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <nav class="navigation">
+        <img class="logo" src="./logo.svg" alt="Technigo logo">
+        <a class="big" href="#">Big news</a>
+        <a class="small" href="#">Other news</a>
+        <a href="">About</a>
+        <a href="">Contact</a>
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <div class="big1">
+        <img class="reef" src="https://cdn.pixabay.com/photo/2014/06/27/12/36/fish-378286_960_720.jpg" alt="Fish in a coral reef">
+        <figcaption class="big2">
+          <h3>Underwater life returns to the reefs</h3>
+          <p>For many years the habitants of the coral reef has been decresing but now we can se a increes in spieces.</p>
+      </figcaption>
+      </div>
     </section>
 
-    <section class="">
+    <section class="other-news">
       <!-- The other news  -->
+        <div class="other1">
+          <img class="img-news" src="https://cdn.pixabay.com/photo/2012/03/03/23/52/sea-21649_960_720.jpg " alt="jellyfish">
+          <figcaption>Jellyfish is thriving</figcaption>
+      </div>
+      <div class="other2">
+        <img class="img-news" src="https://cdn.pixabay.com/photo/2013/11/01/11/13/dolphin-203875_960_720.jpg" alt="Dolphin">
+        <figcaption>Does dolphins pose for pictures?</figcaption>
+      </div>
+      <div class="other3">
+        <img class="img-news" src="https://cdn.pixabay.com/photo/2016/02/22/18/46/underwater-1216244_960_720.jpg" alt="Fish in underwater building">
+        <figcaption>Fish returning to Atlantis</figcaption>
+      </div>
+      <div class="other4">
+        <img class="img-news" src="https://cdn.pixabay.com/photo/2012/03/04/00/02/animal-21731_960_720.jpg" alt="Sawfish">
+        <figcaption>The Sawfish - carpenter of the ocean?</figcaption>
+      </div>
+      <div class="other5">
+        <img class="img-news" src="https://cdn.pixabay.com/photo/2015/07/27/19/47/turtle-863336_960_720.jpg" alt="turtle">
+        <figcaption>Turtles are actually quite grumpy</figcaption>
+      </div>
+      <div class="other6">
+        <img class="img-news" src="https://cdn.pixabay.com/photo/2014/07/08/13/38/manatee-387194_960_720.jpg" alt="Manatee greeting a diver">
+        <figcaption>The manatee is an endangered species.</figcaption>
+      </div>
+      <div class="other7">
+        <img class="img-news" src="https://cdn.pixabay.com/photo/2014/08/15/11/29/beach-418742_960_720.jpg" alt="coast where mountain meets ocean">
+        <figcaption>Hidden locations in the medditeranian sea</figcaption>
+      </div>
     </section>
   </body>
 </html>
