--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,81 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Wonderlust</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;1,500&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <img class="logo" src="images/travel-logo.png" alt="Travel logo"/>
+      <h1>Wonderlust</h1>
+      <div class="meny">
+      <div class="menu-line"></div>
+      <div class="menu-line"></div>
+      <div class="menu-line"></div>
+    </div>
+      <nav>
+       <a class="a-nav" href="#">Inspiration</a>
+       <a class="a-nav" href="#">Articles</a>
+       <a class="a-nav" href="#">Subscribe</a>
+       <a class="a-nav" href="#">About us</a>
+      </nav>
     </header>
 
+<div class="wrapper">
     <section class="big-news">
-      <!-- The big news content -->
+      <img class="big-news-image" src="https://images.unsplash.com/photo-1488646953014-85cb44e25828?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2133&q=80" alt="Travel notes on a map"/>
+      <h2>Travel the world: Big guide</h2>
+      <p>Read more...</p>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <hr>
+<!--card1-->
+    <section class="news-card">
+      <img class="news-card-image" src="https://images.unsplash.com/photo-1533105079780-92b9be482077?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1234&q=80" alt="Blue Greece ocean"/>
+      <h3>Greece on a budget</h3>
     </section>
+  <!--card2-->
+    <section class="news-card">
+      <img class="news-card-image" src="https://images.unsplash.com/photo-1510265119258-db115b0e8172?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80" alt="English countryside"/>
+      <h3>Discover the small roads of London</h3>
+    </section>
+  <!--card3-->
+    <section class="news-card">
+      <img class="news-card-image" src="https://images.unsplash.com/photo-1514970746-d4a465d514d0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1300&q=80" alt="Train on brigde in snowy mountains"/>
+      <h3>Take the scenic route to Austria</h3>
+    </section>
+  <!--card4-->
+    <section class="news-card">
+      <img class="news-card-image" src="https://images.unsplash.com/photo-1531219432768-9f540ce91ef3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80" alt="orange van by the ocean"/>
+      <h3>Find the hidden surfspots of Australia</h3>
+    </section>
+  <!--card5-->
+    <section class="news-card">
+      <img class="news-card-image" src="https://images.unsplash.com/photo-1454430690613-c5fbdb397f65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1288&q=80" alt="phone taking pictures in paris"/>
+      <h3>5 steps to take better vaccation photos </h3>
+    </section>
+  <!--card6-->
+    <section class="news-card">
+      <img class="news-card-image" src="https://images.unsplash.com/photo-1494783367193-149034c05e8f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80" alt="Open road in the mountains"/>
+      <h3>Road trip summer! Guide on where to drive</h3>
+    </section>
+    <!--card7-->
+    <section class="news-card">
+      <img class="news-card-image" src="https://images.unsplash.com/photo-1530521954074-e64f6810b32d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80" alt="airport terminal"/>
+      <h3>5 things to do at the airport!</h3>
+    </section>
+  </div>
   </body>
 </html>
+
+
+<!-- From `0px` to `767px` → **Mobile**
+
+From `768px` to `991px` → **Tablet**
+
+From `992px` to `∞` → **Desktop**
+-->
