Changed h3 and added strong in footer

--- a/code/index.html
+++ b/code/index.html
@@ -70,7 +70,7 @@
           <img src="images/lewis_hamilton.jpg" alt="Lewis Hamilton portrait">
         </div>
         <div class="card-text">
-          <h3>The legend Lewis Hamilton</h3>
+          <h3>The legend - Lewis Hamilton</h3>
           <div class="border"></div>
           <div class="border"></div>
         </div>
@@ -152,7 +152,7 @@
 
   <div class="page-footer">
     <p>© 2021 Formula 1 Magazine. Content is available under these licenses. Photos are from 
-      <a href="https://media.daimler.com/marsMediaSite/en/instance/ko.xhtml?oid=9265894&relId=1001&resultInfoTypeId=172#toRelation" target="_blank"><strong></strong> media</a>
+      <a href="https://media.daimler.com/marsMediaSite/en/instance/ko.xhtml?oid=9265894&relId=1001&resultInfoTypeId=172#toRelation" target="_blank"><strong>Daimler media</strong></a>
     <ul class="footer-legal">
       <li><a href="https://www.google.com/" target="_blank" rel="noopener noreferrer">Terms</a></li>
         <li><a href="https://www.google.com/" target="_blank" rel="noopener noreferrer">Privacy</a></li>
