added text in h2

--- a/code/index.html
+++ b/code/index.html
@@ -38,7 +38,7 @@
       <div class="main-article-ingress">
         <div class="border"></div>
         <div class="border"></div>
-        <h2><span style="color:#FF0000;">New </span>F1 Safety Car</h2>
+        <h2><span style="color:#FF0000;">New </span>F1 Safety Car heu hej hej</h2>
         <p>It’s a familiar sight for fans of the FIA Formula 1 World Championship: when there’s been an accident on
           track or the weather conditions are bad, a Mercedes-AMG safely leads the field of F1 cars around the track.
           It’s been this way for 25 years. And for 20 years, Bernd Mayländer has been at the steering wheel of the
