adds text to the news-snippets

--- a/code/index.html
+++ b/code/index.html
@@ -31,11 +31,13 @@
         <h1>Environmental News</h1>
       </div>
 
-      <nav class="navigation">
-        <a class="navigation-link" href="#">Home</a>
-        <a class="navigation-link" href="#">About us</a>
-        <a class="navigation-link" href="#">Contact</a>
-      </nav>
+      <div class="navigation">
+        <nav>
+          <a class="navigation-link" href="#">Home</a>
+          <a class="navigation-link" href="#">About us</a>
+          <a class="navigation-link" href="#">Contact</a>
+        </nav>
+      </div>
     </header>
 
     <section class="big-news">
@@ -49,9 +51,13 @@
       
       <div class="news-snippets">
         <img src="https://images.unsplash.com/photo-1629160548610-5e1d4e359e95?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDk2fDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-          alt="Two elefants greeting">
-        <h3>Elefant-slagsmål</h3>
-        <p>Femhundra elefanter slogs i nationalparken Elefantland</p>
+          alt="An infant elephant">
+        <h3>150,000 people evacuated</h3>
+        <p>More than 150,000 people have been evacuated from the path of a herd of migrating elephants, Chinese officials have said.
+
+          Authorities in south-western Yunnan province feared conflict between residents and the 14 Asian elephants which have been on the move for months.
+          
+          More than 25,000 police officers using vehicles and drones have monitored the herd, state media report.</p>
       </div>
 
       <div class="news-snippets">
