Added content and coding

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,69 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img  src="./logo.svg" alt="site-logo" class="site-logo">
+      <h1 class="header-text">The Daily Clubber</h1>
     </header>
+      <nav> 
+        <a class="nav-menu" href="#Events">Events</a>
+        <a class="nav-menu" href="#Music">Music</a>
+        <a class="nav-menu" href="#About Us">About Us</a>
+      </nav>
+   
 
     <section class="big-news">
       <!-- The big news content -->
+      <img src="./9jgR917dSTygCDTokSBugQ-crop-c0-5__0-5-718x441-70.jpeg" 
+      alt="dekmantel-selector-croatia" class="big-news-foto">
+      <article>
+        <h1>Event of the week</h1>
+        <p>At the end of an unusual summer, we are more than happy to say: Yes, Dekmantel Selectors 2021 is happening. The current Croatian event regulations allow events with a capacity exceeding 1000 people, such as Dekmantel Selectors, when the organizer applies to the Croatian government for an additional permit. This permit, which is granted to our hosts at The Garden, demands that a range of safety requirements are implemented. Amongst others these are a mandatory valid ECC check (European Covid Certificate - proof of vaccination, a recent negative test or proof of recent recovery) at the entrance for all visitors and an on-site testing facility. With this, we can safely draw DJs and punters back to stay in Tisno. Great music, plentiful sunshine, and a much-needed moment to breathe.</p>
+      </article>
     </section>
 
-    <section class="">
+    <section class="all-events">
       <!-- The other news  -->
+      <div class="events">
+        <img src="./se-0825-1458644-front.jpeg" alt="antony-linell" class="events-photo">
+        <p>Peder Mannerfelt, Antony Linell & Ali M. Demirel present an evening of blistering audiovisual electronics in the beautiful setting of Capitol's prime movie theatre </p>
+      </div>
+      <div class="events">
+        <img src="./de-0827-1458473-1779846-front.jpeg" alt="staub-festival" class="events-photo">
+        <p>Line-up will be announced soon</p>
+      </div>
+      <div class="events">
+        <img src="./df2021_bannerfb_def.jpeg" alt="draaimolen-festival" class="events-photo">
+        <p>Draaimolen 2021 is going to be a special one. </p>
+      </div>
+      <div class="events">
+        <img src="./de-0827-1458473-1779846-front.jpeg" alt="staub-festival" class="events-photo">
+        <p>Line-up will be announced soon</p>
+      </div>
     </section>
+
+    <section class="music">
+      <img src="./smile-front-cover-scaled-cover.jpeg" alt="theo-parrish-cover" class="music-photo">
+      <p>Strong words and even stronger music as Theo keeps it realer than anyone in the game.</p>
+
+      <img src="./a0810955077_10-cover.jpeg" alt="alien-3-mix" class="music-photo"> 
+      <p>An excellent techno remix that finds Daniel Avery in rare form.</p>
+
+      <img src="./andy-stott-never-cover.jpeg" alt="andy-stott-cover" class="music-photo">
+      <p>A noir-pop milestone for the Manchester artist.</p>
+
+    </section>
+
+    <footer>
+      &copy;Copyright 2021 
+      <a href="#efthymios.karakasis@gmail.com">Email us</a>
+
+    </footer>
   </body>
-</html>
+</html> 
