styling nav links

--- a/code/index.html
+++ b/code/index.html
@@ -6,19 +6,42 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Project 2: The News Site</title>
 		<link rel="stylesheet" href="./style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap" rel="stylesheet" />
 		<!-- dont forget the meta tag for responsiveness -->
 	</head>
 	<body>
 		<header>
 			<!-- Some kind of logo and navbar -->
-			<img class="header-logo" src="./images/logo.svg" alt="logo" />
+			<!-- <img class="header-logo" src="./images/logo.svg" alt="logo" /> -->
+			<div class="header-top">
+				<div>
+					<div class="header-support">Support the Fakeian</div>
+					<div class="header-funded">Available for everyone, funded by FakeNews Corp.</div>
+					<button class="header-btn-yellow">Contribute</button>
+					<button class="header-btn-yellow">Subscribe</button>
+				</div>
+				<div>
+					<button class="header-btn-small">Search jobs</button>
+					<button class="header-btn-small">Sign in</button>
+					<button class="header-btn-small">Search</button>
+				</div>
+				<div class="logo-text">
+					<h1>The</h1>
+					<h1>Fakeian</h1>
+				</div>
+				<div>
+					<button class="header-btn-small">International edition</button>
+				</div>
+			</div>
 			<nav>
-				<a href="http://" target="_blank">
-					<p class="nav-button">LINK 1</p>
-				</a>
-				<a href="http://" target="_blank">LINK 2</a>
-				<a href="http://" target="_blank">LINK 3</a>
-				<a href="http://" target="_blank">LINK 4</a>
+				<a href="http://" target="_blank">News</a>
+				<a href="http://" target="_blank">Opinion</a>
+				<a href="http://" target="_blank">Sport</a>
+				<a href="http://" target="_blank">Culture</a>
+				<a href="http://" target="_blank">Lifestyle</a>
+				<a href="http://" target="_blank">More</a>
 			</nav>
 		</header>
 		<main>
