Added new photo,edited html

--- a/code/index.html
+++ b/code/index.html
@@ -49,16 +49,23 @@
       </div>
     </section>
 
-    <section class="music">
-      <img src="./smile-front-cover-scaled-cover.jpeg" alt="theo-parrish-cover" class="music-photo">
-      <p>Strong words and even stronger music as Theo keeps it realer than anyone in the game.</p>
-
-      <img src="./a0810955077_10-cover.jpeg" alt="alien-3-mix" class="music-photo"> 
-      <p>An excellent techno remix that finds Daniel Avery in rare form.</p>
-
-      <img src="./andy-stott-never-cover.jpeg" alt="andy-stott-cover" class="music-photo">
-      <p>A noir-pop milestone for the Manchester artist.</p>
-
+    <section class="all-music">
+      <div class="music">
+        <img src="./smile-front-cover-scaled-cover.jpeg" alt="theo-parrish-cover" class="music-photo">
+        <p>Strong words and even stronger music as Theo keeps it realer than anyone in the game.</p>
+      </div>
+      <div class="music">
+        <img src="./a0810955077_10-cover.jpeg" alt="alien-3-mix" class="music-photo"> 
+        <p>An excellent techno remix that finds Daniel Avery in rare form.</p>
+      </div>
+      <div class="music">
+        <img src="./andy-stott-never-cover.jpeg" alt="andy-stott-cover" class="music-photo">
+        <p>A noir-pop milestone for the Manchester artist.</p>
+      </div>
+      <div class="music">
+        <img src="./XNewYork_PcQWOEQ.png" alt="giegling-logo" class="music-photo">
+        <p>Giegling releasing new album</p>
+      </div>
     </section>
 
     <footer>
