added most of the side's structure in html and did styling for the mobile version

--- a/code/index.html
+++ b/code/index.html
@@ -3,20 +3,60 @@
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="stylesheet" href="./style.css" />  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/745bd96b12.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
+      <div class="logo-container">
+        <img class="logo" src="./lakelogo-cropped.svg" alt="Fjord Logo" />
+        <h1>A fjord with no name</h1>
+      </div>
+      <nav>
+        <a href="#">About</a>
+        <a href="#">Blog</a>
+        <a href="#">Outdoor</a>
+        <a href="#">Contact</a>
+      </nav>
       <!-- Some kind of logo and navbar -->
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <img class="big-news-image" src="./image/window_ brian-walker.jpg" alt="windowview of a northern lake" />
+      <p class="big-news-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
 
-    <section class="">
+    <section class="other-news">
       <!-- The other news  -->
+      <img class="other-news-image" src="./image/apples-fanny-gustafsson.jpg" alt="four apples lying on the ground" />
+      <p class="other-news-text">An apple a day...</p>
+      <img class="other-news-image" src="./image/meadow-anne-nygard.jpg" alt="a meadow in late summer" />
+      <p class="other-news-text">Lorem ipsum dolor...</p>
+      <img class="other-news-image" src="./image/flower-elisa-h.jpg" alt="closup of a white flower in natural habitat" />
+      <p class="other-news-text">Lorem ipsum dolor...</p>
+      <img class="other-news-image" src="./image/fire-isi-parente.jpg" alt="bonfire in a dark night" />
+      <p class="other-news-text">Lorem ipsum dolor...</p>
+      <img class="other-news-image" src="./image/lilacflower-may-marketing.jpg" alt="closeup of lilac flowers in natural habitat" />
+      <p class="other-news-text">Lorem ipsum dolor...</p>
+      <img class="other-news-image" src="./image/Raspberry-amanda-hortiz.jpg" alt="closup of a twig with blackberries" />
+      <p class="other-news-text">Lorem ipsum dolor...</p>
+      <img class="other-news-image" src="./image/mushrooms-andrew-ridley.jpg" alt="different sorts of mushrooms lying next to each other" />
+      <p class="other-news-text">Tasty treasures...</p>
+    </section>
+
+    <section class="about">
+      <div class="sm-icons">
+        <a href="https://github.com/nehrwein" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://codepen.io/BumBumBurka" target="_blank"><i class="fab fa-codepen"></i></a>
+        <a href="https://www.linkedin.com/in/birgit-nehrwein-9b4656194/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.facebook.com/birgit.nehrwein.7/" target="_blank"><i class="fab fa-facebook"></i></a> 
+      </div>
+      <p class="about-paragraph">Get in contact! :)</p>
     </section>
   </body>
 </html>
