structured the code

--- a/code/index.html
+++ b/code/index.html
@@ -27,7 +27,7 @@
       <section class="big-news">
         <img class="big-news-img" src="images/main.jpg" alt="">
         <div class="intro"><h2><strong>text</strong></h2>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p></div>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p></div>
       </section>
 
 <!---small news-->
@@ -48,7 +48,7 @@
           <p>2.“…Did your cat just eat my tuna sandwhich? It’s a paw-sibility.”</p>
       </div> 
       <div class="small-news">
-        <img src="images/teeth.jpg" alt="">
+        <img src="images/eskil.jpg" alt="">
         <h3><strong>A-paw-ling = Appalling</strong></h3>
          <p><strong>adjective</strong></p>
          <p>1. Causing shock or dismay for a cat; horrific.</p>
@@ -69,7 +69,7 @@
          <p>2.“I’m not playing games with you, mouse – this is fur real!”</p>
       </div> 
       <div class="small-news">
-        <img src="images/eskil.jpg" alt="">
+        <img src="images/teeth.jpg" alt="">
         <h3><strong>Hiss-terical = Hysterical</strong></h3>
          <p><strong>adjective</strong></p>
          <p>1.Deriving from or affected by a cat with uncontrolled extreme emotion.</p>
@@ -95,7 +95,6 @@
   <footer>
     <div class="links">
     <div class="top"><a href=""> 🢁</a></div>
-    
       <img src="images/celebration.png" alt="">
       <p><strong>Sofia</strong></p>
       <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
